--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -1,1 +1,23 @@
-@import '~normalize.css'
+@import '~normalize.css';
+
+html {
+  background-color: #f4f5f5;
+}
+
+li {
+  list-style: none;
+}
+
+ul,
+li,
+p,
+h1,
+h2,
+h3,
+h4 {
+  padding: 0;
+  margin: 0;
+}
+a{
+  display: block;
+}
