--- a/frontend/src/pages/home/components/navigation/style.module.scss
+++ b/frontend/src/pages/home/components/navigation/style.module.scss
@@ -1,15 +1,37 @@
 .nav {
   background-color: #fff;
   border-radius: 4px;
-  padding: 15px;
+  padding: 12px;
   width: 120px;
   box-sizing: border-box;
 
   .list {
     text-align: center;
+    font-size: 14px;
 
     &:first-child {
-      border-bottom: 1px solid $color;
+      margin-bottom: 5px;
+      border-bottom: 1px solid  rgba(92,96,102,.1);
+    }
+
+    li {
+      margin-bottom: 6px;
+      &:last-child{
+        margin-bottom: 5px;
+      }
+      a {
+        color: $s-color;
+        height: 34px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 4px;
+        transition: all .4s;
+        &:hover,&.active {
+          background-color: hsla(0, 0%, 94.9%, .6);
+          color: $h-color;
+        }
+      }
     }
   }
 
