--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -16,9 +16,11 @@ h2,
 h3,
 h4,
 a,
+div,
 button {
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
 }
 
 a {
@@ -26,12 +28,15 @@ a {
   color: $s-color;
   text-decoration: none;
 }
-button{
+
+button {
   cursor: pointer;
 }
+
 button,
 input {
   border: none;
+
   &:focus {
     outline: none;
   }
